--- a/ArmourAppUi/ArmourAppUi/Styles/main.css
+++ b/ArmourAppUi/ArmourAppUi/Styles/main.css
@@ -14,42 +14,60 @@ stacklayout {
 
 
 .header {
-    padding: 10 20;
+    padding: 10 15;
     margin: 0;
-    background-color: #222;
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-    .header label {
-        color: #fff;
-        /*font-family: 'Montserrat-SemiBold';
-        font-style: normal;
-        font-weight: 700;*/
-        font-size: 20;
-    }
+.header label {
+    color: #222;
+    /*font-family: 'Montserrat-SemiBold';
+    font-style: normal;
+    font-weight: 700;*/
+    font-size: 16;
+}
 
 
 
 .avatar {
-    border-radius: 20;
-    width: 40;
-    height: 40;
+    width: 30;
+    height: 30;
 }
 
-.footer {
+.quote_space {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
+
+.quote {
+    text-wrap: normal;
+    text-align: center;
+    color: #ddd;
+    font-size: 18;
+    font-weight: bold;
+    margin: 0 20 15 20;
+
+}
+
+.author {
+    color: #ccc;
+    font-size: 15;
+    text-align: end;
+    padding-right: 30;
+
+}
+
 
 .nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-
-imagebutton {
-    background-color: #fff;
-    padding: 0 40;
+    background-color: red;
 }
 
 .active {
