--- a/ArmourAppUi/ArmourAppUi/Views/Templates/Styles.xaml
+++ b/ArmourAppUi/ArmourAppUi/Views/Templates/Styles.xaml
@@ -6,8 +6,8 @@
     xmlns:border="clr-namespace:Syncfusion.XForms.Border;assembly=Syncfusion.Core.XForms"
     xmlns:buttons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
     xmlns:combobox="clr-namespace:Syncfusion.XForms.ComboBox;assembly=Syncfusion.SfComboBox.XForms"
-    xmlns:rating="clr-namespace:Syncfusion.SfRating.XForms;assembly=Syncfusion.SfRating.XForms"
-    xmlns:graphics="clr-namespace:Syncfusion.XForms.Graphics;assembly=Syncfusion.Core.XForms">
+    xmlns:graphics="clr-namespace:Syncfusion.XForms.Graphics;assembly=Syncfusion.Core.XForms"
+    xmlns:rating="clr-namespace:Syncfusion.SfRating.XForms;assembly=Syncfusion.SfRating.XForms">
 
     <Color x:Key="Gold">#fcbc0f</Color>
     <Color x:Key="Steel">#788396</Color>
@@ -203,18 +203,17 @@
         <Setter Property="HorizontalOptions" Value="Center" />
         <Setter Property="VerticalTextAlignment" Value="Center" />
         <Setter Property="HorizontalTextAlignment" Value="Center" />
-        <Setter Property="FontFamily" Value="{StaticResource FontIcons}"/>
-        <Setter Property="TextColor" Value="{DynamicResource Gray-White}"/>
+        <Setter Property="FontFamily" Value="{StaticResource FontIcons}" />
+        <Setter Property="TextColor" Value="{DynamicResource Gray-White}" />
     </Style>
 
     <!--  Common style for activity count  -->
     <Style x:Key="ActivityCount" TargetType="Label">
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="FontFamily" Value="{StaticResource Montserrat-Medium}"/>
-        <Setter Property="LineHeight" Value="{OnPlatform Default=-1,
-                                               Android=1.5}" />
-        <Setter Property="VerticalOptions" Value="Center"/>
-        <Setter Property="TextColor" Value="{DynamicResource Gray-800}"/>
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="FontFamily" Value="{StaticResource Montserrat-Medium}" />
+        <Setter Property="LineHeight" Value="{OnPlatform Default=-1, Android=1.5}" />
+        <Setter Property="VerticalOptions" Value="Center" />
+        <Setter Property="TextColor" Value="{DynamicResource Gray-800}" />
     </Style>
 
 </ResourceDictionary>
